--- a/Jenkins-kaniko-arm64.yaml
+++ b/Jenkins-kaniko-arm64.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: kaniko
+  namespace: devops-tools
 spec:
   serviceAccountName: jenkins-sa
   nodeSelector:
