--- a/Jenkins-manifest-tool.yaml
+++ b/Jenkins-manifest-tool.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: manifest-tool
+  namespace: devops-tools
 spec:
   serviceAccountName: jenkins-sa
   containers:
