--- a/Jenkins-kaniko-amd64.yaml
+++ b/Jenkins-kaniko-amd64.yaml
@@ -16,4 +16,11 @@ spec:
         - sleep
       args:
         - 99d
+      volumeMounts:
+      - mountPath: /home/jenkins/agent/.m2
+        name: m2-home
   restartPolicy: Never
+  volumes:
+  - name: m2-home
+    persistentVolumeClaim:
+      claimName: jenkins-pv-claim
