--- a/helm-deployment/volume.yaml
+++ b/helm-deployment/volume.yaml
@@ -10,3 +10,16 @@ spec:
   resources:
     requests:
       storage: 100Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jenkins-pv-claim-m2
+  namespace: devops-tools
+spec:
+  storageClassName: efs-sc
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 100Gi
