--- a/Jenkins-maven.yaml
+++ b/Jenkins-maven.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Pod
 spec:
+  securityContext:
+    fsGroup: 1000
   containers:
   - name: maven
     image: maven:3.3.9-jdk-8-alpine
