--- a/Jenkins-maven.yaml
+++ b/Jenkins-maven.yaml
@@ -1,6 +1,9 @@
 apiVersion: v1
 kind: Pod
 spec:
+  serviceAccountName: jenkins-sa
+  nodeSelector:
+    kubernetes.io/arch: amd64
   securityContext:
     fsGroup: 1000
   containers:
